removing Perforce Ant tasks
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1442023 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/etc/poms/ant-apache-oro/pom.xml
+++ b/src/etc/poms/ant-apache-oro/pom.xml
@@ -57,16 +57,12 @@
         <configuration>
           <includes>
             <include>org/apache/tools/ant/util/regexp/JakartaOro*</include>
-            <include>org/apache/tools/ant/taskdefs/optional/perforce/*</include>
           </includes>
-          <testIncludes>
-            <include>org/apache/tools/ant/taskdefs/optional/perforce/*</include>
-          </testIncludes>
         </configuration>
       </plugin>
     </plugins>
     <sourceDirectory>../../../../src/main</sourceDirectory>
-    <testSourceDirectory>../../../../src/testcases</testSourceDirectory>
+    <testSourceDirectory>../../../../src/tests/junit</testSourceDirectory>
     <outputDirectory>../../../../target/${project.artifactId}/classes</outputDirectory>
     <testOutputDirectory>../../../../target/${project.artifactId}/testcases</testOutputDirectory>
     <directory>../../../../target/${project.artifactId}</directory>
