create tmp dir when running individual test as well
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1462910 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1584,6 +1584,7 @@ ${antunit.reports}
   </target>
 
   <target name="test-init" depends="probe-offline,check_for_optional_packages">
+    <mkdir dir="${build.junit.tmpdir}"/>
     <macrodef name="test-junit">
       <element name="junit-nested" implicit="true" />
       <sequential>
