Re-introduce JUnit3/JUnit4 split
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1471115 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -186,7 +186,22 @@
   </selector>
 
   <selector id="needs.junit">
-    <filename name="${optional.package}/junit/"/>
+    <and>
+      <filename name="${optional.package}/junit/"/>
+      <not>
+          <or>
+            <filename name="${optional.package}/junit/JUnit4TestMethodAdapter*"/>
+            <filename name="${optional.package}/junit/CustomJUnit4TestAdapterCache*" />
+          </or>
+      </not>
+    </and>
+  </selector>
+
+  <selector id="needs.junit4">
+      <or>
+         <filename name="${optional.package}/junit/JUnit4TestMethodAdapter*"/>
+         <filename name="${optional.package}/junit/CustomJUnit4TestAdapterCache*" />
+      </or>
   </selector>
 
   <selector id="needs.apache-regexp">
@@ -295,6 +310,7 @@
         <selector refid="needs.jmf"/>
         <selector refid="needs.jsch"/>
         <selector refid="needs.junit"/>
+        <selector refid="needs.junit4"/>
         <selector refid="needs.netrexx"/>
         <selector refid="needs.swing"/>
         <selector refid="ant.launcher"/>
@@ -368,6 +384,9 @@
       classname="org.apache.xalan.trace.TraceListenerEx3"
       classpathref="classpath" ignoresystemclasses="${ignoresystemclasses}"/>
     <available property="junit.present"
+      classname="junit.framework.TestCase"
+      classpathref="classpath" ignoresystemclasses="${ignoresystemclasses}"/>
+    <available property="junit4.present"
       classname="org.junit.Test"
       classpathref="classpath" ignoresystemclasses="${ignoresystemclasses}"/>
     <available property="antunit.present"
@@ -548,7 +567,8 @@
             <selector refid="not.in.kaffe" if="kaffe"/>
 
             <selector refid="needs.apache-resolver" unless="apache.resolver.present"/>
-            <selector refid="needs.junit" unless="junit.present"/>
+            <selector refid="needs.junit" unless="junit.present"/> <!-- XXX should perhaps use -source 1.4? -->
+            <selector refid="needs.junit4" unless="junit4.present"/>
             <selector refid="needs.apache-regexp"
               unless="apache.regexp.present"/>
             <selector refid="needs.apache-oro" unless="apache.oro.present"/>
@@ -721,6 +741,7 @@
 
     <optional-jar dep="apache-resolver"/>
     <optional-jar dep="junit"/>
+    <optional-jar dep="junit4"/>
     <optional-jar dep="apache-regexp"/>
     <optional-jar dep="apache-oro"/>
     <optional-jar dep="apache-bcel"/>
@@ -813,6 +834,7 @@
 
     <optional-src-jar dep="apache-resolver"/>
     <optional-src-jar dep="junit"/>
+    <optional-src-jar dep="junit4"/>
     <optional-src-jar dep="apache-regexp"/>
     <optional-src-jar dep="apache-oro"/>
     <optional-src-jar dep="apache-bcel"/>
