--- a/src/etc/poms/pom.xml
+++ b/src/etc/poms/pom.xml
@@ -97,6 +97,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
     <module>ant-jmf</module>
     <module>ant-jsch</module>
     <module>ant-junit</module>
+    <module>ant-junit4</module>
     <module>ant-launcher</module>
     <module>ant-netrexx</module>
     <module>ant-swing</module>
@@ -106,7 +107,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
