--- a/src/etc/poms/ant-jsch/pom.xml
+++ b/src/etc/poms/ant-jsch/pom.xml
@@ -35,7 +35,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
   <version>1.9.1-SNAPSHOT</version>
   <name>Apache Ant + JSch</name>
   <description>contains the sshexec and scp tasks
-  jsch 0.1.29 might not be available from maven</description>
+  </description>
   <dependencies>
     <dependency>
       <groupId>org.apache.ant</groupId>
@@ -46,7 +46,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
     <dependency>
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
-      <version>0.1.42</version>
+      <version>0.1.50</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
