--- a/build.xml
+++ b/build.xml
@@ -34,9 +34,9 @@
   <property name="name" value="ant"/>
   <!-- this is the groupId of ant in the Maven repository -->
   <property name="groupid" value="org/apache/ant"/>
-  <property name="project.version" value="1.9.2alpha"/>
+  <property name="project.version" value="1.9.2"/>
   <!-- pom.version is used when doing a distribution and must match with what is checked in under src/etc/poms -->
-  <property name="pom.version" value="1.9.2-SNAPSHOT"/>
+  <property name="pom.version" value="1.9.2"/>
   <property name="manifest-version" value="1.9.2"/>
   <property name="bootstrap.jar" value="ant-bootstrap.jar"/>
 
