pass ant.home down to antunit tests
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1515083 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1937,6 +1937,7 @@ ${antunit.reports}
       <au:xmllistener todir="${antunit.xml}" />
       <propertyset>
         <propertyref name="antunit.tmpdir"/>
+        <propertyref name="ant.home"/>
       </propertyset>
     </au:antunit>
   </target>
